--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec ts-node ./src/index.ts",
+    "install": "npm install",
     "build": "tsc"
   },
   "keywords": [],
