--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,11 +1,13 @@
-{  
-  "compilerOptions": { 
-    "module": "commonjs", 
-    "esModuleInterop": true, 
-    "target": "es6", "moduleResolution": 
-    "node", "sourceMap": true, 
-    "outDir": "dist", 
-    "resolveJsonModule": true, 
-   }, 
-  "lib": ["es2015"] 
+{
+  "compilerOptions": {
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "target": "es6",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "outDir": "dist",
+    "resolveJsonModule": true
+  },
+  "include": ["./api/*.ts"],
+  "lib": ["es2015"]
 }
