--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,7 +3,7 @@
     "jsx": "react",
     "target": "es6",
     "lib": [
-      "esnext"
+      "esnext", "DOM"
     ],
     "allowJs": true,
     "skipLibCheck": true,
